# Chat-with-repository

./: .env.example  .gitignore  Dockerfile  Explorer.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
src/chatrepo/: __init__.py  api.py  chains.py  config.py  index.py  ingest.py  parser.py
src/rag_explorer/: embedder.py  loader.py  splitter.py
tests/: test_parser.py  test_smoke.py
