[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatrepo"
version = "0.1.0"
description = "Chat-with-Repository backend"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
